# agent-orchestration-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/maestro/: __init__.py  __main__.py  cli.py  constants.py  llm.py  llm_mock_responses.py  mcp_client.py  models.py  orchestrator.py  settings.py
src/maestro/agents/: __init__.py  researcher.py
src/maestro/mcp_server/: __init__.py  __main__.py  fetch_url.py  server.py
tests/: conftest.py  mcp_test_helpers.py  test_cli.py  test_llm.py  test_mcp_client.py  test_mcp_fetch_url.py  test_models.py  test_orchestrator.py  test_researcher.py  test_settings.py
